# ai-pricing

./: .dockerignore  .env.template  .env.test  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.deployment  Dockerfile.production  README.md  cleanup_docker_files.sh  deploy.sh  docker-compose.production.yml  docker-compose.yml  docker_test.sh  example_usage.sh  load_assets.py  main.py  nginx.conf  pyproject.toml  pytest.ini  requirements.production.txt  requirements.txt  sample_assets.json  simple_docker_test.sh  test_api.sh  test_docker_deployment.sh  test_integrations.py
ai_pricing/: __init__.py
ai_pricing/api/: app.py  routes.py
ai_pricing/core/: embedding_model.py  pricing_engine.py
ai_pricing/data/: asset_db.py
ai_pricing/models/: schemas.py
ai_pricing/services/: blockchain.py  data_sources.py
ai_pricing/tests/: conftest.py
ai_pricing/tests/integration/: __init__.py  test_api.py
ai_pricing/tests/unit/: test_data_sources.py  test_pricing_engine.py  test_schemas.py
ai_pricing/utils/: config.py
