[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_pricing"
version = "0.1.0"
description = "AI engine for dynamic pricing of tokenized real-world assets"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "TheBulls Team", email = "info@thebulls.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.1",
    "langchain>=0.1.13",
    "langchain-core>=0.1.33,<0.2.0",
    "langchain-groq>=0.1.5",
    "groq>=0.5.0",
    "faiss-cpu",
    "pandas>=2.1.4",
    "numpy>=1.26.3",
    "requests>=2.31.0",
    "aiohttp>=3.9.1",
    "textblob>=0.17.1",
    "sentence-transformers>=2.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.28.1",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
]

[tool.setuptools]
packages = ["ai_pricing"]

[tool.pytest.ini_options]
testpaths = ["ai_pricing/tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
